Change the QRCode data link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </section>
 <section id="codebox" class="lightbox">
 	<div>
-		<p><img src="http://chart.googleapis.com/chart?chs=360x360&cht=qr&chl=http%3A%2F%2Fmoztw.org%2F" alt="QR Code" /></p>
+		<p><img src="http://chart.googleapis.com/chart?chs=360x360&cht=qr&chl=http%3A%2F%2Fmoztw.org%2Ffoxmosa%2Fgame%2Fpairs" alt="QR Code" /></p>
 		<p><a href="#">&raquo; close &laquo;</a></p>
 	</div>
 </section>
