add open graph meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <title>Browser Pairs Game - Using CSS3 Animation</title>
+<meta property="og:title" content="Browser Pairs Game" />
+<meta property="og:type" content="game" />
+<meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
+<meta property="og:url" content="http://moztw.org/foxmosa/game/pairs" />
+<meta property="og:image" content="http://moztw.github.com/logo.png" />
+<meta property="og:site_name" content="MozTW" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Days+One">
 <link rel="stylesheet" href="style.css" />
 </head>
