change og:url tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:title" content="Browser Pairs Game" />
 <meta property="og:type" content="game" />
 <meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
-<meta property="og:url" content="http://moztw.org/foxmosa/game/pairs" />
+<meta property="og:url" content="http://moztw.github.com/game/browserpairs/" />
 <meta property="og:image" content="http://moztw.github.com/logo.png" />
 <meta property="og:site_name" content="MozTW" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Days+One">
