add the logo picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:type" content="game" />
 <meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
 <meta property="og:url" content="http://moztw.github.com/game/browserpairs/" />
-<meta property="og:image" content="http://moztw.github.com/logo.png" />
+<meta property="og:image" content="http://moztw.github.com/game/browserpairs/images/logo.jpg" />
 <meta property="og:site_name" content="MozTW" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Days+One">
 <link rel="stylesheet" href="style.css" />
@@ -60,7 +60,7 @@
 <section id="creditbox" class="lightbox">
 	<div>
 		<h2>HTML5 Browser Pairs Game</h2>
-		<p><a href="http://moztw.org">Mozilla Taiwan Community</a><br />×<br /><a href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
+		<p><img src="images/logo.jpg" alt="LOGO" /><br /><a href="http://moztw.org">Mozilla Taiwan Community</a><br />×<br /><a href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
 		<p>Illustrated by ECBp,<br />licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/tw/">CC:BY-NC-SA-3.0-TW</a></p>
 		<p>Music: Mozilla-Blues, composed by <a href="http://magicdesign.blogspot.com/">MGdesigner</a>,<br />licensed under <a href="http://creativecommons.org/licenses/by/3.0/tw/deed.en">CC:BY-3.0-TW</a></p>
 		<p>Programed by <a href="http://kidwm.net/">WM</a>, Derived from <a href="http://www.my-html-codes.com/game-using-css3-animation">Dino Pair Game</a><br />by <a href="http://www.my-html-codes.com/">Matt Walker</a>, Thank him for the original game.</p>
@@ -69,7 +69,8 @@
 </section>
 <section id="codebox" class="lightbox">
 	<div>
-		<p><img src="http://chart.googleapis.com/chart?chs=360x360&cht=qr&chl=http%3A%2F%2Fmoztw.org%2Ffoxmosa%2Fgame%2Fpairs" alt="QR Code" /></p>
+		<h2>QR Code</h2>
+		<p><img src="http://chart.googleapis.com/chart?chs=400x400&cht=qr&chl=http%3A%2F%2Fmoztw.org%2Ffoxmosa%2Fgame%2Fpairs" alt="QR Code" /></p>
 		<p><a href="#">&raquo; close &laquo;</a></p>
 	</div>
 </section>
