Add some meta for iPad safari webapp support
Signed-off-by: Irvin <irvinfly@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title>Browser Pairs Game - Using CSS3 Animation</title>
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>Browser Pairs Game - Using CSS3 Animation</title>
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+<link rel="apple-touch-startup-image" sizes="768x1004" href="images/ipad-splash-portrait.png" />
+<link rel="apple-touch-startup-image" sizes="1024x748" href="images/ipad-splash-landscape.png" />
+<link rel="apple-touch-icon" href="images/logo.jpg" />  
 <meta property="og:title" content="Browser Pairs Game" />
 <meta property="og:type" content="game" />
 <meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
