--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<link rel="apple-touch-startup-image" sizes="768x1004" href="images/ipad-splash-portrait.png" />
-<link rel="apple-touch-startup-image" sizes="1024x748" href="images/ipad-splash-landscape.png" />
+<link rel="apple-touch-startup-image" sizes="768x1004" href="images/ipad-splash-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
+<link rel="apple-touch-startup-image" sizes="1024x748" href="images/ipad-splash-landscape.png"  media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
 <link rel="apple-touch-icon" href="images/logo.jpg" />  
 <meta property="og:title" content="Browser Pairs Game" />
 <meta property="og:type" content="game" />
