--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="/site.appcache">
+<html manifest="./site.appcache">
 <head>
 <meta charset="utf-8">
 <title>Browser Pairs Game - Using CSS3 Animation</title>
