--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 <link rel="apple-touch-startup-image" sizes="768x1004" href="images/ipad-splash-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
 <link rel="apple-touch-startup-image" sizes="1024x748" href="images/ipad-splash-landscape.png"  media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
-<link rel="apple-touch-icon" href="images/logo.jpg" />  
+<link rel="apple-touch-icon" href="images/logo.jpg" />
 <meta property="og:title" content="Browser Pairs Game" />
 <meta property="og:type" content="game" />
 <meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
@@ -80,24 +80,24 @@
 	</div>
 </section>
 <audio id="melody">
-   <source src="song.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="song.mp3" type="audio/mpeg" />
+   <source src="sound/song.ogg" type="audio/ogg; codecs=vorbis" />
+   <source src="sound/song.mp3" type="audio/mpeg" />
 </audio>
 <audio class="sound">
-   <source src="intro.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="intro.mp3" type="audio/mpeg" />
+   <source src="sound/intro.ogg" type="audio/ogg; codecs=vorbis" />
+   <source src="sound/intro.mp3" type="audio/mpeg" />
 </audio>
 <audio class="sound">
-   <source src="select.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="select.mp3" type="audio/mpeg" />
+   <source src="sound/select.ogg" type="audio/ogg; codecs=vorbis" />
+   <source src="sound/select.mp3" type="audio/mpeg" />
 </audio>
 <audio class="sound">
-   <source src="match.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="match.mp3" type="audio/mpeg" />
+   <source src="sound/match.ogg" type="audio/ogg; codecs=vorbis" />
+   <source src="sound/match.mp3" type="audio/mpeg" />
 </audio>
 <audio class="sound">
-   <source src="applause.ogg" type="audio/ogg; codecs=vorbis" />
-   <source src="applause.mp3" type="audio/mpeg" />
+   <source src="sound/applause.ogg" type="audio/ogg; codecs=vorbis" />
+   <source src="sound/applause.mp3" type="audio/mpeg" />
 </audio>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="pxloader.js"></script>
