--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <meta property="og:title" content="Browser Pairs Game" />
 <meta property="og:type" content="game" />
 <meta property="og:description" content="A game pair your lovely browsers and their characters. The CSS3 Transform demo by MozTW Community" />
-<meta property="og:url" content="http://moztw.github.com/game/browserpairs/" />
-<meta property="og:image" content="http://moztw.github.com/game/browserpairs/images/logo.jpg" />
-<meta property="og:site_name" content="MozTW" />
+<meta property="og:url" content="http://moztw.org/foxmosa/game/pairs/" />
+<meta property="og:image" content="http://moztw.org/foxmosa/game/pairs/images/logo.jpg" />
+<meta property="og:site_name" content="MozTW, Mozilla Taiwan Community" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Days+One">
 <link rel="stylesheet" href="style.css" />
 </head>
