Add CSS ribbon from http://people.mozilla.com/~jbalogh/ribbon/ribbon.html
Signed-off-by: Irvin <irvinfly@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
 <meta property="og:url" content="http://moztw.org/foxmosa/game/pairs/" />
 <meta property="og:image" content="http://moztw.org/foxmosa/game/pairs/images/logo.jpg" />
 <meta property="og:site_name" content="MozTW, Mozilla Taiwan Community" />
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Days+One">
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:600|Days+One">
 <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="ribbon.css">
 </head>
 <body>
+
+<!-- CSS GitHub ribbon http://people.mozilla.com/~jbalogh/ribbon/ribbon.html -->
+<div class="right ribbon-holder">
+    <a href="https://github.com/moztw/browserpairs" class="red ribbon">
+        <span class="text">Fork me on GitHub</span>
+    </a>
+</div>
+      
 <article id="game">
 	<header id="gameStats">
 		<a id="qrcode" href="#codebox">QRCODE</a>
