Set target _blank for outgoing link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!-- CSS GitHub ribbon http://people.mozilla.com/~jbalogh/ribbon/ribbon.html -->
 <div class="right ribbon-holder">
-    <a href="https://github.com/moztw/browserpairs" class="red ribbon">
+    <a target="_blank" href="https://github.com/moztw/browserpairs" class="red ribbon">
         <span class="text">Fork me on GitHub</span>
     </a>
 </div>
@@ -101,10 +101,10 @@
 <section id="creditbox" class="lightbox">
 	<div>
 		<h2>HTML5 Browser Pairs Game</h2>
-		<p><img src="images/logo.jpg" alt="LOGO" /><br /><a href="http://moztw.org">Mozilla Taiwan Community</a><br />×<br /><a href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
-		<p>Illustrated by ECBp,<br />licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/tw/">CC:BY-NC-SA-3.0-TW</a></p>
-		<p>Music: Mozilla-Blues, composed by <a href="http://magicdesign.blogspot.com/">MGdesigner</a>,<br />licensed under <a href="http://creativecommons.org/licenses/by/3.0/tw/deed.en">CC:BY-3.0-TW</a></p>
-		<p>Programed by <a href="http://kidwm.net/">WM</a>, Derived from <a href="http://www.my-html-codes.com/game-using-css3-animation">Dino Pair Game</a><br />by <a href="http://www.my-html-codes.com/">Matt Walker</a>, Thank him for the original game.</p>
+		<p><img src="images/logo.jpg" alt="LOGO" /><br /><a target="_blank" href="http://moztw.org">Mozilla Taiwan Community</a><br />×<br /><a target="_blank" href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
+		<p>Illustrated by ECBp,<br />licensed under <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/3.0/tw/">CC:BY-NC-SA-3.0-TW</a></p>
+		<p>Music: Mozilla-Blues, composed by <a target="_blank" href="http://magicdesign.blogspot.com/">MGdesigner</a>,<br />licensed under <a target="_blank" href="http://creativecommons.org/licenses/by/3.0/tw/deed.en">CC:BY-3.0-TW</a></p>
+		<p>Programed by <a target="_blank" href="http://kidwm.net/">WM</a>, Derived from <a target="_blank" href="http://www.my-html-codes.com/game-using-css3-animation">Dino Pair Game</a><br />by <a target="_blank" href="http://www.my-html-codes.com/">Matt Walker</a>, Thank him for the original game.</p>
 		<p><a href="#">&raquo; close &laquo;</a></p>
 	</div>
 </section>
