--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <meta property="og:url" content="http://moztw.org/foxmosa/game/pairs/" />
 <meta property="og:image" content="http://moztw.org/foxmosa/game/pairs/images/logo.jpg" />
 <meta property="og:site_name" content="MozTW, Mozilla Taiwan Community" />
+<!--[if lt IE 9]>
+<script src="html5shiv.js"></script>
+<![endif]-->
+<!--[if lt IE 9]>
+<script src="IE9.js"></script>
+<![endif]-->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:600|Days+One">
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="ribbon.css">
