Simplify website title
Signed-off-by: Irvin <irvinfly@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html manifest="./site.appcache">
 <head>
 <meta charset="utf-8">
-<title>Browser Pairs Game - Foxmosa - MozTW</title>
+<title>BrowserPairs - Foxmosa - MozTW</title>
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
