update 'fork me' url
Signed-off-by: Irvin <irvinfly@gmail.com>

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!-- CSS GitHub ribbon http://people.mozilla.com/~jbalogh/ribbon/ribbon.html -->
 <div class="right ribbon-holder">
-    <a target="_blank" href="https://github.com/moztw/browserpairs" class="red ribbon">
+    <a target="_blank" href="http://github.com/moztw/browser-pairs" class="red ribbon">
         <span class="text">Fork me on GitHub</span>
     </a>
 </div>
