Update links to be https friendly

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--[if lt IE 9]>
 <script src="IE9.js"></script>
 <![endif]-->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:600|Days+One">
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:600|Days+One">
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="ribbon.css">
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -53,7 +53,7 @@
 
 <!-- CSS GitHub ribbon http://people.mozilla.com/~jbalogh/ribbon/ribbon.html -->
 <div class="right ribbon-holder">
-    <a target="_blank" href="http://github.com/moztw/browser-pairs" class="red ribbon">
+    <a target="_blank" href="https://github.com/moztw/browser-pairs" class="red ribbon">
         <span class="text">Fork me on GitHub</span>
     </a>
 </div>
@@ -108,9 +108,9 @@
 <section id="creditbox" class="lightbox">
 	<div>
 		<h2>HTML5 Browser Pairs Game</h2>
-		<p><img src="images/logo.jpg" alt="LOGO" /><br /><a target="_blank" href="http://moztw.org">Mozilla Taiwan Community</a><br />×<br /><a target="_blank" href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
-		<p>Illustrated by ECBp,<br />licensed under <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/3.0/tw/">CC:BY-NC-SA-3.0-TW</a></p>
-		<p>Music: Mozilla-Blues, composed by <a target="_blank" href="http://magicdesign.blogspot.com/">MGdesigner</a>,<br />licensed under <a target="_blank" href="http://creativecommons.org/licenses/by/3.0/tw/deed.en">CC:BY-3.0-TW</a></p>
+		<p><img src="images/logo.jpg" alt="LOGO" /><br /><a target="_blank" href="//moztw.org">Mozilla Taiwan Community</a><br />×<br /><a target="_blank" href="http://blog.yam.com/ECBp/article/44076465">Explorer Cyber Browserer Comic</a></p>
+		<p>Illustrated by ECBp,<br />licensed under <a target="_blank" href="https://creativecommons.org/licenses/by-nc-sa/3.0/tw/">CC:BY-NC-SA-3.0-TW</a></p>
+		<p>Music: Mozilla-Blues, composed by <a target="_blank" href="http://magicdesign.blogspot.com/">MGdesigner</a>,<br />licensed under <a target="_blank" href="https://creativecommons.org/licenses/by/3.0/tw/deed.en">CC:BY-3.0-TW</a></p>
 		<p>Programed by <a target="_blank" href="http://kidwm.net/">WM</a>, Derived from <a target="_blank" href="http://www.my-html-codes.com/game-using-css3-animation">Dino Pair Game</a><br />by <a target="_blank" href="http://www.my-html-codes.com/">Matt Walker</a>, Thank him for the original game.</p>
 		<p><a href="#">&raquo; close &laquo;</a></p>
 	</div>
@@ -118,7 +118,7 @@
 <section id="codebox" class="lightbox">
 	<div>
 		<h2>QR Code</h2>
-		<p><img src="http://chart.googleapis.com/chart?chs=400x400&cht=qr&chl=http%3A%2F%2Fmoztw.org%2Ffoxmosa%2Fgame%2Fpairs" alt="QR Code" /></p>
+		<p><img src="https://chart.googleapis.com/chart?chs=400x400&cht=qr&chl=%3A%2F%2Fmoztw.org%2Ffoxmosa%2Fgame%2Fpairs" alt="QR Code" /></p>
 		<p><a href="#">&raquo; close &laquo;</a></p>
 	</div>
 </section>
@@ -142,7 +142,7 @@
    <source src="sound/applause.ogg" type="audio/ogg; codecs=vorbis" />
    <source src="sound/applause.mp3" type="audio/mpeg" />
 </audio>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="pxloader.js"></script>
 <script src="script.js"></script>
 <script type="text/javascript">
